{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 24,
  "lineage": "5cbc5910-f355-2581-9e0b-64ed108e5f94",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f58b397bc5c1f2e8",
            "arn": "arn:aws:ec2:ap-south-1:471112676915:instance/i-08694cb13b951eb94",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08694cb13b951eb94",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2 learning",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05228f87da691f5b2",
            "private_dns": "ip-10-0-7-211.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.7.211",
            "public_dns": "ec2-13-201-101-30.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.101.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0abea3143c2561d4e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0f82a6199830db6de"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06162368291cbe271",
            "tags": {
              "Name": "main_instances"
            },
            "tags_all": {
              "Name": "main_instances"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f82a6199830db6de"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.allow_ssh",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112676915:internet-gateway/igw-0f13a6e56ff21c294",
            "id": "igw-0f13a6e56ff21c294",
            "owner_id": "471112676915",
            "tags": {
              "Name": "TF_IGW"
            },
            "tags_all": {
              "Name": "TF_IGW"
            },
            "vpc_id": "vpc-06b49a4bda077a093"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "new_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e6f6fe937e7dd24",
            "arn": "arn:aws:ec2:ap-south-1:471112676915:elastic-ip/eipalloc-01e6f6fe937e7dd24",
            "domain": "vpc",
            "id": "eipalloc-01e6f6fe937e7dd24",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-207-195-99.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.195.99",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "elasticIP"
            },
            "tags_all": {
              "Name": "elasticIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e6f6fe937e7dd24",
            "association_id": "eipassoc-01c376851ed7be38b",
            "connectivity_type": "public",
            "id": "nat-0a7ea92c3801f7d0e",
            "network_interface_id": "eni-0f5aaea8a6b5bbe74",
            "private_ip": "10.0.10.153",
            "public_ip": "15.207.195.99",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e3c30d8e4f83f2f3",
            "tags": {
              "name": "NGW"
            },
            "tags_all": {
              "name": "NGW"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.new_eip",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112676915:route-table/rtb-07c8d001ca1be7f3a",
            "id": "rtb-07c8d001ca1be7f3a",
            "owner_id": "471112676915",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a7ea92c3801f7d0e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TF_routetable"
            },
            "tags_all": {
              "Name": "TF_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b49a4bda077a093"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.new_eip",
            "module.nat_gateway.aws_nat_gateway.ngw",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112676915:route-table/rtb-098dbf3a25e111d5d",
            "id": "rtb-098dbf3a25e111d5d",
            "owner_id": "471112676915",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f13a6e56ff21c294",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TF_routetable"
            },
            "tags_all": {
              "Name": "TF_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b49a4bda077a093"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa450a7f2bbdd7ae",
            "route_table_id": "rtb-07c8d001ca1be7f3a",
            "subnet_id": "subnet-0e3c30d8e4f83f2f3"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.new_eip",
            "module.nat_gateway.aws_nat_gateway.ngw",
            "module.route_table.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0058f74e2fefef034",
            "route_table_id": "rtb-07c8d001ca1be7f3a",
            "subnet_id": "subnet-048d0fdf54ae4c183"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.new_eip",
            "module.nat_gateway.aws_nat_gateway.ngw",
            "module.route_table.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a50e459b8cd829d1",
            "route_table_id": "rtb-07c8d001ca1be7f3a",
            "subnet_id": "subnet-02710fe0597d313ae"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.new_eip",
            "module.nat_gateway.aws_nat_gateway.ngw",
            "module.route_table.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00217c6b06c575d79",
            "route_table_id": "rtb-098dbf3a25e111d5d",
            "subnet_id": "subnet-06162368291cbe271"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.igw",
            "module.route_table.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a50736cce0c00cd2",
            "route_table_id": "rtb-098dbf3a25e111d5d",
            "subnet_id": "subnet-07cc70906b64bd506"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.igw",
            "module.route_table.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06afb5c5d03952369",
            "route_table_id": "rtb-098dbf3a25e111d5d",
            "subnet_id": "subnet-0fb78321de0d0b1e5"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.igw",
            "module.route_table.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112676915:security-group/sg-0f82a6199830db6de",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f82a6199830db6de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240530050020653400000001",
            "name_prefix": "terraform-",
            "owner_id": "471112676915",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b49a4bda077a093"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112676915:subnet/subnet-0e3c30d8e4f83f2f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3c30d8e4f83f2f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112676915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF_privatesubnet"
            },
            "tags_all": {
              "Name": "TF_privatesubnet"
            },
            "vpc_id": "vpc-06b49a4bda077a093"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112676915:subnet/subnet-048d0fdf54ae4c183",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048d0fdf54ae4c183",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112676915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF_privatesubnet"
            },
            "tags_all": {
              "Name": "TF_privatesubnet"
            },
            "vpc_id": "vpc-06b49a4bda077a093"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112676915:subnet/subnet-02710fe0597d313ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02710fe0597d313ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112676915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF_privatesubnet"
            },
            "tags_all": {
              "Name": "TF_privatesubnet"
            },
            "vpc_id": "vpc-06b49a4bda077a093"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112676915:subnet/subnet-06162368291cbe271",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06162368291cbe271",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112676915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF_publicsubnet"
            },
            "tags_all": {
              "Name": "TF_publicsubnet"
            },
            "vpc_id": "vpc-06b49a4bda077a093"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112676915:subnet/subnet-07cc70906b64bd506",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cc70906b64bd506",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112676915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF_publicsubnet"
            },
            "tags_all": {
              "Name": "TF_publicsubnet"
            },
            "vpc_id": "vpc-06b49a4bda077a093"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112676915:subnet/subnet-0fb78321de0d0b1e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb78321de0d0b1e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112676915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF_publicsubnet"
            },
            "tags_all": {
              "Name": "TF_publicsubnet"
            },
            "vpc_id": "vpc-06b49a4bda077a093"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112676915:vpc/vpc-06b49a4bda077a093",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02876320149ff0431",
            "default_route_table_id": "rtb-02efde1825fce4c46",
            "default_security_group_id": "sg-0ba2c20b146114c9e",
            "dhcp_options_id": "dopt-071931adabe5f7ad3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06b49a4bda077a093",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02efde1825fce4c46",
            "owner_id": "471112676915"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}